@@ -40,7 +40,7 @@ debian-rvm/smplayer-default.ex -text
 debian-rvm/smplayer.doc-base.EX -text
 debian-rvm/watch.ex -text
 docs/de/GPL.html -text
-docs/en/GPL.txt -text
+docs/en/GPL.html -text
 docs/es/GPL.html -text
 /get_svn_revision.sh -text
 getrev/compile.bat -text
